# pair

./: .gitignore  pixi.toml
app/: analysis_options.yaml  pubspec.yaml
app/assets/i18n/: en.json
app/lib/: main.dart
app/lib/config/: init.dart  theme.dart
app/lib/features/receive/: receive_tab_vm.dart
app/lib/features/send/: send_tab_vm.dart
app/lib/pages/: apk_picker_page.dart  home_page.dart  home_page_controller.dart  language_page.dart  progress_page.dart  receive_history_page.dart  receive_options_page.dart  receive_page.dart  selected_files_page.dart  send_page.dart  troubleshoot_page.dart  web_send_page.dart
app/lib/pages/debug/: debug_page.dart  (+1 more)
app/lib/provider/: animation_provider.dart  device_info_provider.dart  http_provider.dart  local_ip_provider.dart  persistence_provider.dart  progress_provider.dart
app/lib/util/: device_type_ext.dart
app/lib/widget/: adaptive_layout.dart  big_button.dart  custom_basic_appbar.dart  custom_icon_button.dart  custom_progress_bar.dart  device_bage.dart  file_thumbnail.dart  responsive_list_view.dart
app/rust/: Cargo.toml
app/rust/src/api/: logging.rs  webrtc.rs
app/test/: mocks.mocks.dart
cli/lib/: main.dart
core/: Cargo.toml
core/src/: main.rs
core/src/crypto/: cert.rs  mod.rs  token.rs
core/src/model/: discovery.rs
core/src/util/: base64.rs
core/src/webrtc/: mod.rs  peer.rs  signaling.rs
scripts/: contributions_digester.dart
server/: Cargo.toml
server/src/controller/: ws_controller.rs
terminal/: pubspec.yaml
terminal/lib/: main.dart
terminal/test/: terminal_test.dart
(+73 files in other folders)
